Misc fix for button vertical alignment

--- a/ui.apps/src/main/content/jcr_root/apps/clientlibs/granite/coralui3/css/all.css
+++ b/ui.apps/src/main/content/jcr_root/apps/clientlibs/granite/coralui3/css/all.css
@@ -24111,6 +24111,7 @@ coral-shell-header-content > a {
 coral-button-label {
   display: inline-block;
   line-height: 1;
+  vertical-align: bottom;
 }
 
 coral-button-label > a {
